# StratumX

./: AGENTS.md  Cargo.toml
.codex/: acceptance.md  mission.md  report-template.md  rules.md
2.engine/l-0.05-world-region/world-region/engine_world_region/: Cargo.toml
2.engine/l-0.05-world-region/world-region/engine_world_region/src/: lib.rs
2.engine/l-0.05-world-region/world-region/engine_world_region/tests/: region.rs
2.engine/l-0.1-world-spatial/world-spatial/engine_world_spatial/: Cargo.toml
2.engine/l-0.1-world-spatial/world-spatial/engine_world_spatial/src/: lib.rs
2.engine/l-0.1-world-spatial/world-spatial/engine_world_spatial/tests/: spatial.rs
2.engine/l-0.2-ecs-assembly/ecs/engine_ecs/: Cargo.toml
2.engine/l-0.2-ecs-assembly/ecs/engine_ecs/src/: lib.rs
2.engine/l-0.2-ecs-assembly/ecs/engine_ecs/tests/: ecs.rs
2.engine/l-0.3-ecs-query/ecs-query/engine_ecs_query/: Cargo.toml
2.engine/l-0.3-ecs-query/ecs-query/engine_ecs_query/src/: lib.rs
2.engine/l-0.3-ecs-query/ecs-query/engine_ecs_query/tests/: query.rs
2.engine/l-0.5-storage-mutation/storage-mutation/engine_storage_mutation/: Cargo.toml
2.engine/l-0.5-storage-mutation/storage-mutation/engine_storage_mutation/src/: lib.rs
2.engine/l-0.5-storage-mutation/storage-mutation/engine_storage_mutation/tests/: mutation.rs  mutation_models.rs
2.engine/l-0.6-storage-access/storage-access/engine_storage_access/: Cargo.toml
2.engine/l-0.6-storage-access/storage-access/engine_storage_access/src/: lib.rs
2.engine/l-0.6-storage-access/storage-access/engine_storage_access/tests/: access.rs  access_models.rs
2.engine/l-0.7-storage-layout/storage-layout/engine_storage_layout/: Cargo.toml
2.engine/l-0.7-storage-layout/storage-layout/engine_storage_layout/src/: lib.rs
2.engine/l-0.7-storage-layout/storage-layout/engine_storage_layout/tests/: layout.rs  layout_descriptors.rs
2.engine/l-0.8-handle-system/handle/engine_handle/: Cargo.toml
2.engine/l-0.8-handle-system/handle/engine_handle/src/: lib.rs
2.engine/l-0.8-handle-system/handle/engine_handle/tests/: handle_models.rs
2.engine/l-0.8-handle/handle/engine_handle/: Cargo.toml
2.engine/l-0.8-handle/handle/engine_handle/src/: lib.rs
2.engine/l-0.8-handle/handle/engine_handle/tests/: handle.rs
2.engine/l-0.9-identity-primitives/identity/engine_identity/: Cargo.toml
2.engine/l-0.9-identity-primitives/identity/engine_identity/src/: lib.rs
2.engine/l-0.9-identity-primitives/identity/engine_identity/tests/: identity.rs
2.engine/l0-world-truth/world/engine_world/: Cargo.toml
2.engine/l0-world-truth/world/engine_world/src/: lib.rs
2.engine/l0-world-truth/world/engine_world/tests/: world.rs
2.engine/l0.5-shared-world-properties/material/engine_material/: Cargo.toml
2.engine/l0.5-shared-world-properties/material/engine_material/src/: lib.rs
2.engine/l0.5-shared-world-properties/material/engine_material/tests/: material.rs
2.engine/l1-runtime-kernel/runtime-realtime/engine_runtime_realtime/: Cargo.toml
2.engine/l1-runtime-kernel/runtime-realtime/engine_runtime_realtime/src/: lib.rs
2.engine/l1-runtime-kernel/runtime-realtime/engine_runtime_realtime/tests/: realtime.rs
2.engine/l1-runtime-kernel/runtime/engine_runtime/: Cargo.toml
2.engine/l1-runtime-kernel/runtime/engine_runtime/src/: lib.rs
2.engine/l1-runtime-kernel/runtime/engine_runtime/tests/: runtime.rs
2.engine/l1.5-runtime-resource-services/memory-control/engine_memory_control/: Cargo.toml
2.engine/l1.5-runtime-resource-services/memory-control/engine_memory_control/src/: lib.rs
2.engine/l1.5-runtime-resource-services/memory-control/engine_memory_control/tests/: memory.rs
2.engine/l1.5-runtime-resource-services/residency-control/engine_residency_control/: Cargo.toml
2.engine/l1.5-runtime-resource-services/residency-control/engine_residency_control/src/: lib.rs
2.engine/l1.5-runtime-resource-services/residency-control/engine_residency_control/tests/: residency.rs
2.engine/l1.5-runtime-resource-services/transfer-control/engine_transfer_control/: Cargo.toml
2.engine/l1.5-runtime-resource-services/transfer-control/engine_transfer_control/src/: lib.rs
2.engine/l1.5-runtime-resource-services/transfer-control/engine_transfer_control/tests/: transfer.rs
2.engine/l2-critical-simulation-families/agents/engine_agents/: Cargo.toml
2.engine/l2-critical-simulation-families/agents/engine_agents/src/: lib.rs
2.engine/l2-critical-simulation-families/agents/engine_agents/tests/: agents.rs
2.engine/l2-critical-simulation-families/field/engine_field/: Cargo.toml
2.engine/l2-critical-simulation-families/field/engine_field/src/: lib.rs
2.engine/l2-critical-simulation-families/field/engine_field/tests/: field.rs
2.engine/l2.5-network-runtime-services/net-sync/engine_net_sync/: Cargo.toml
2.engine/l2.5-network-runtime-services/net-sync/engine_net_sync/src/: lib.rs
2.engine/l2.5-network-runtime-services/net-sync/engine_net_sync/tests/: net_sync.rs
2.engine/l2.5-network-runtime-services/net-transport/engine_net_transport/: Cargo.toml
2.engine/l2.5-network-runtime-services/net-transport/engine_net_transport/src/: lib.rs
2.engine/l2.5-network-runtime-services/net-transport/engine_net_transport/tests/: net_transport.rs
2.engine/l3.0-model-systems/generation/engine_generation/: Cargo.toml
2.engine/l3.0-model-systems/generation/engine_generation/src/: lib.rs
2.engine/l3.0-model-systems/generation/engine_generation/tests/: generation.rs
2.engine/l3.0-model-systems/inference/engine_inference/: Cargo.toml
2.engine/l3.0-model-systems/inference/engine_inference/src/: lib.rs
2.engine/l3.0-model-systems/inference/engine_inference/tests/: inference.rs
2.engine/l3.1-synthesis-systems/imaging/engine_imaging/: Cargo.toml
2.engine/l3.1-synthesis-systems/imaging/engine_imaging/src/: lib.rs
2.engine/l3.1-synthesis-systems/imaging/engine_imaging/tests/: imaging.rs
2.engine/l4-startup/startup/engine_startup/: Cargo.toml
2.engine/l4-startup/startup/engine_startup/src/: lib.rs
2.engine/l4-startup/startup/engine_startup/tests/: startup.rs
(+1793 files in other folders)
