[workspace]
members = [
  "2.engine/l-1-foundation/core/engine_core",
  "2.engine/l-0.9-identity/identity/engine_identity",
  "2.engine/l-0.8-handle/handle/engine_handle",
  "2.engine/l-0.7-storage-layout/storage-layout/engine_storage_layout",
  "2.engine/l-0.6-storage-access/storage-access/engine_storage_access",
  "2.engine/l-0.5-storage-mutation/storage-mutation/engine_storage_mutation",
  "2.engine/l-0.4-ecs-registry/ecs-registry/engine_ecs_registry",
  "2.engine/l-0.3-ecs-query/ecs-query/engine_ecs_query",
  "2.engine/l-0.2-ecs-assembly/ecs/engine_ecs",
  "2.engine/l-0.1-world-spatial/world-spatial/engine_world_spatial",
  "2.engine/l-0.05-world-region/world-region/engine_world_region",
  "2.engine/l0-world-truth/world/engine_world",
  "2.engine/l0.5-shared-world-properties/material/engine_material",
  "2.engine/l1-runtime-kernel/runtime/engine_runtime",
  "2.engine/l1-runtime-kernel/runtime-headless/engine_runtime_headless",
  "2.engine/l1-runtime-kernel/runtime-realtime/engine_runtime_realtime",
  "2.engine/l1.5-runtime-resource-services/stream-control/engine_stream_control",
  "2.engine/l1.5-runtime-resource-services/residency-control/engine_residency_control",
  "2.engine/l1.5-runtime-resource-services/memory-control/engine_memory_control",
  "2.engine/l1.5-runtime-resource-services/transfer-control/engine_transfer_control",
  "2.engine/l2-critical-simulation-families/kinetics/engine_kinetics",
  "2.engine/l2-critical-simulation-families/field/engine_field",
  "2.engine/l2-critical-simulation-families/agents/engine_agents",
  "2.engine/l2.5-network-runtime-services/net-transport/engine_net_transport",
  "2.engine/l2.5-network-runtime-services/net-sync/engine_net_sync",
  "2.engine/l2.5-network-runtime-services/net-latency/engine_net_latency",
  "2.engine/l3.0-model-systems/inference/engine_inference",
  "2.engine/l3.0-model-systems/generation/engine_generation",
  "2.engine/l3.1-synthesis-systems/imaging/engine_imaging",
  "2.engine/l3.1-synthesis-systems/acoustics/engine_acoustics",
  "2.engine/l3.2-resource-systems/content/engine_content",
  "2.engine/l4-startup/startup/engine_startup",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["StratumX Contributors"]
rust-version = "1.76"

[workspace.dependencies]
bitflags = { version = "2.6", features = ["serde"] }
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "1.0"
bincode = "1.3"

tracing = "0.1"
rayon = "1.10"
crossbeam = "0.8"
crossbeam-deque = "0.8"
parking_lot = "0.12"
bumpalo = "3.16"
mimalloc = "0.1"
bytemuck = "1.16"
serde_json = "1.0"
tracing-subscriber = "0.3"
backtrace = "0.3"
