[package]
name = "engine_world_spatial"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_identity = { path = "../../../l-0.9-identity/identity/engine_identity" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
glam.workspace = true
serde.workspace = true
