[package]
name = "engine_ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_identity = { path = "../../../l-0.9-identity/identity/engine_identity" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_storage_layout = { path = "../../../l-0.7-storage-layout/storage-layout/engine_storage_layout" }
engine_storage_access = { path = "../../../l-0.6-storage-access/storage-access/engine_storage_access" }
engine_storage_mutation = { path = "../../../l-0.5-storage-mutation/storage-mutation/engine_storage_mutation" }
engine_ecs_registry = { path = "../../../l-0.4-ecs-registry/ecs-registry/engine_ecs_registry" }
engine_ecs_query = { path = "../../../l-0.3-ecs-query/ecs-query/engine_ecs_query" }
serde.workspace = true

[dev-dependencies]
smallvec.workspace = true
