[package]
name = "engine_ecs_query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_identity = { path = "../../../l-0.9-identity/identity/engine_identity" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_storage_access = { path = "../../../l-0.6-storage-access/storage-access/engine_storage_access" }
engine_ecs_registry = { path = "../../../l-0.4-ecs-registry/ecs-registry/engine_ecs_registry" }
bitflags.workspace = true
smallvec.workspace = true
