[package]
name = "engine_storage_mutation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { version = "2", features = ["serde"] }
engine_identity = { package = "engine_core", path = "../../../l-1-foundation/core/engine_core" }
engine_handle = { path = "../../../l-0.8-handle-system/handle/engine_handle" }
engine_storage_access = { package = "engine_storage_layout", path = "../../../l-0.7-storage-layout/storage-layout/engine_storage_layout" }
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
