[package]
name = "engine_storage_layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
bitflags.workspace = true
serde.workspace = true
smallvec.workspace = true
