[package]
name = "engine_handle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_identity = { path = "../../../l-0.9-identity/identity/engine_identity" }
serde.workspace = true
slotmap.workspace = true
