[package]
name = "engine_identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
serde = { version = "1", features = ["derive"] }
slotmap = { version = "1", features = ["serde"] }
