[package]
name = "engine_material"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_world = { path = "../../../l0-world-truth/world/engine_world" }
serde.workspace = true
bitflags.workspace = true
smallvec.workspace = true
