[package]
name = "engine_runtime_realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_runtime = { path = "../../runtime/engine_runtime" }
engine_world = { path = "../../../l0-world-truth/world/engine_world" }
engine_ecs = { path = "../../../l-0.2-ecs-assembly/ecs/engine_ecs" }
tracing.workspace = true
smallvec.workspace = true
