[package]
name = "engine_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_ecs = { path = "../../../l-0.2-ecs-assembly/ecs/engine_ecs" }
engine_world = { path = "../../../l0-world-truth/world/engine_world" }
engine_world_region = { path = "../../../l-0.05-world-region/world-region/engine_world_region" }
tracing.workspace = true
rayon.workspace = true
crossbeam.workspace = true
crossbeam-deque.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
