[package]
name = "engine_residency_control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_world = { path = "../../../l0-world-truth/world/engine_world" }
engine_world_region = { path = "../../../l-0.05-world-region/world-region/engine_world_region" }
engine_stream_control = { path = "../../stream-control/engine_stream_control" }
engine_memory_control = { path = "../../memory-control/engine_memory_control" }
bitflags.workspace = true
smallvec.workspace = true
tracing.workspace = true
