[package]
name = "engine_net_transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
engine_core = { path = "../../../l-1-foundation/core/engine_core" }
engine_handle = { path = "../../../l-0.8-handle/handle/engine_handle" }
engine_runtime = { path = "../../../l1-runtime-kernel/runtime/engine_runtime" }
serde.workspace = true
smallvec.workspace = true
bitflags.workspace = true
